<resources>
    <string name="app_name">PurchaseList_v2_MatAlv</string>
    <string name="welcome_title">Welcome to the Purchase List</string>
    <string name="home">Inicio</string>
    <string name="back">Atrás</string>
    <string name="inventory">Inventory</string>
    <string name="registry">Movement Registry</string>
    <string name="products">Products</string>
    <string name="title_main">Purchase List</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="tomato">Tomato</string>
    <string name="lettuce">Lettuce</string>
    <string name="type">Type</string>
    <string name="product_name">Product Name</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sorted_by_name">Sorted by: Name</string>
    <string name="sort_by_name">Sort by: Name</string>
    <string name="sort_by_type">Sort by: Type</string>
    <string name="sort_by_price">Sort by: Price</string>
    <string name="sort_options">Sort Options</string>
    <string name="potato">Potato</string>
    <string name="coca_cola">Coca-Cola</string>
    <string name="drinks">Drinks</string>
    <string name="juice">Juice</string>
    <string name="toothpaste">Toothpaste</string>
    <string name="personal_hygiene">Personal Hygiene</string>
    <string name="amoxicillin">Amoxicillin</string>
    <string name="medicine">Medicine</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="price_per_unit">Price per Unit</string>
    <string name="total_price">Total Price</string>
    <string name="delete">Delete</string>
    <string name="zero_zero" translatable="false">0.0</string>
    <string name="zero" translatable="false">0</string>
    <string name="total_price_add">"Total Price: %s"</string>
    <string name="inventory_updated">Inventory Updated</string>
    <string name="products_added_to_inventory">Products added to inventory</string>
    <string name="save_inventory">Save Inventory</string>
    <string name="movement_registry">Movement Registry</string>
    <string name="clear_registry">Clear Registry</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="adding_new_item">Adding New Item</string>
    <string name="value">Value</string>
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>
    <string name="edit">Edit</string>
    <string name="amount_add">Amount: %s</string>
    <string name="price_per_unit_add">Price per Unit: %s</string>
    <string name="others">Others</string>
    <string name="box">Box</string>
    <string name="aspirin">Aspirin</string>
</resources>