<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- Icon -->
    <ImageView
        android:id="@+id/imageInventoryItem"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/lettuce"
        android:contentDescription="@string/image"/>

    <!-- Item details -->
    <LinearLayout
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Item Name -->
        <TextView
            android:id="@+id/textViewInventoryItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <!-- Item Type -->
        <TextView
            android:id="@+id/textViewInventoryItemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <!-- Price per Unit -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_per_unit" />

            <EditText
                android:id="@+id/editTextPricePerUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price_per_unit"
                android:inputType="numberDecimal"
                android:text="@string/zero_zero"
                android:autofillHints="" />
        </LinearLayout>


        <!-- Total Price -->
        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price" />

    </LinearLayout>

    <!-- Price per Unit -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutButtonsAndAmount"
            android:layout_width="156dp"
            android:layout_height="49dp"
            android:layout_marginEnd="-20dp"
            android:orientation="horizontal">

            <!-- Minus Button -->
            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/redorange"
                android:contentDescription="@string/minus"
                android:onClick="onMinusButtonClick"
                android:scaleType="centerInside"
                android:src="@drawable/button_minus" />

            <!-- Amount Display -->
            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="16sp" />

            <!-- Plus Button -->
            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/redorange"
                android:contentDescription="@string/plus"
                android:onClick="onPlusButtonClick"
                android:scaleType="centerInside"
                android:src="@drawable/button_plus" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDeleteInventoryItem"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/redorange"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/delete"
            android:scaleType="centerInside"
            android:src="@drawable/button_x" />

    </LinearLayout>

</LinearLayout>
