<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <include
        layout="@layout/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <!-- Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="80dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Name Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/name"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/editTextItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/name"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/type"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/spinnerItemType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textPriceperUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/price_per_unit"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/editTextPricePerUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/value"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/amount"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/editTextAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/value"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/total_price"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/textTotalPriceValue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:text="@string/total_price"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textImage"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/image"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageViewSelectedIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="119dp"
                    android:layout_gravity="center"

                    android:src="@drawable/box" />

                <Spinner
                    android:id="@+id/spinnerIcon"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Confirm Button -->
        <Button
            android:id="@+id/btnConfirmEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>
</RelativeLayout>
