<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange">

        <!-- Linear layout to position buttons and title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Back button -->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/back"
                android:onClick="onBackButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/back_arrow" />

            <!-- Spacer to push title and home button to the right -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <!-- Title TextView -->
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/registry"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <!-- Spacer to push home button to the right -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <!-- Home button -->
            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/home"
                android:scaleType="fitCenter"
                android:src="@drawable/home" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Button to Clear Registry -->
    <Button
        android:id="@+id/btnClearRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp"
        android:text="Clear Registry"
        android:layout_centerHorizontal="true"/>

    <!-- List of Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMoveRegistry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnClearRegistry"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

</RelativeLayout>
